--- a/filebeat/Dockerfile
+++ b/filebeat/Dockerfile
@@ -13,7 +13,7 @@ RUN set -x && \
   cd /opt && \
   tar xzvf filebeat.tar.gz && \
   rm -fr /opt/filebeat.tar.gz && \
-  ln -s filebeat-${FILEBEAT_VERSION}-linux-x86_64 /opt/filebeat && \
+  ln -sv filebeat-${FILEBEAT_VERSION}-linux-x86_64 /opt/filebeat && \
   rm -fr filebeat/filebeat.yml && \
   apt-get purge -y wget && \
   apt-get autoremove -y && \
