--- a/filebeat/Dockerfile
+++ b/filebeat/Dockerfile
@@ -11,9 +11,9 @@ RUN set -x && \
   apt-get install -y wget && \
   wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${FILEBEAT_VERSION}-linux-x86_64.tar.gz -O /opt/filebeat.tar.gz && \
   cd /opt && \
-  tar xzvf filebeat.tar.gz && \
+  tar xzf filebeat.tar.gz && \
   rm -fr /opt/filebeat.tar.gz && \
-  ln -sv filebeat-${FILEBEAT_VERSION}-linux-x86_64 /opt/filebeat && \
+  ln -sv filebeat-${FILEBEAT_VERSION}-linux-x86_64/ /opt/filebeat && \
   rm -fr filebeat/filebeat.yml && \
   apt-get purge -y wget && \
   apt-get autoremove -y && \
