fix CMD, add sorft link

--- a/filebeat/Dockerfile
+++ b/filebeat/Dockerfile
@@ -3,17 +3,17 @@ FROM debian:jessie
 MAINTAINER Johnson Xu <itjohnsonxu@gmail.com>
 
 ENV FILEBEAT_VERSION=6.1.1 \
-    FILEBEAT_HOME=/opt/filebeat
+    FILEBEAT_HOME=/usr/local/filebeat
 WORKDIR ${FILEBEAT_HOME}
 
 RUN set -x && \
   apt-get update && \
   apt-get install -y wget && \
-  wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${FILEBEAT_VERSION}-linux-x86_64.tar.gz -O /opt/filebeat.tar.gz && \
-  cd /opt && \
+  wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${FILEBEAT_VERSION}-linux-x86_64.tar.gz -O /usr/local/filebeat.tar.gz && \
+  cd /usr/local && \
   tar xzf filebeat.tar.gz && \
-  rm -fr /opt/filebeat.tar.gz && \
-  mv filebeat-${FILEBEAT_VERSION}-linux-x86_64 filebeat && \
+  rm -fr filebeat.tar.gz && \
+  ln -sv filebeat-${FILEBEAT_VERSION}-linux-x86_64 ./filebeat && \
   rm -fr filebeat/filebeat.yml && \
   apt-get purge -y wget && \
   apt-get autoremove -y && \
